[package]
name = "luck_sdk"
version = "0.1.0"
authors = ["hzjsea <hzjsea@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] } 
tokio = { version = "1", features = ["full"] }
openssl = "0.10.36"
# hmac = "0.11.0"
# sha-1 = "0.9.7"
rust-crypto = "0.2.36"
chrono = "0.4.19"
md5 = "0.7.0"
hyper = "0.14.12"